0.4.0
	- Added skeletal QualityOfService at RTPS/udds layer. Entities are checked for compatible QoS
	  before adding corresponding matched entity. QualityOfService is initialized with default 
	  values.
	  
0.3.1
	- FIX: set endianness correctly according to sub-message header
	- Added some simple tests
	- buffer size is configurable
	
0.3.0
	- RTPSReader produces Samples to SampleListener
	- Fine tuned visibility.

0.2.2
	- Improved generics
	- @Key annotation is supported by JavaSerializationMarhaller, which is the default marshaller
	  for udds. Keys are marshalled by serializing fields. This results in PID_KEY_HASH being
	  always a MD5 checksum. 
	- custom Marshallers can be registered to udds Participant
	  
0.2.1
	- Added Key as a concept; Readers and Writers are created with kind WITH_KEY or NO_KEY.
	  At RTPS level. If key is present, Data sub-message is marshalled accordingly. uDDS remains as NO_KEY.
	- Fixed some class visibility issues
	- Added some javadocs
	
0.2.0	
	- Turned into multi module build; jrtps & udds separated.
	  udds likely needs to be moved to another package. 
	- hello world sample in udds/src/test
0.1.0	
	- Initial import